# agent

./: .env.example  .gitignore  CLAUDE.md  README.md  README_PHASE2.md  pyproject.toml  requirements.txt  ruff.toml
.claude/: settings.local.json
design/: DESIGN.md  DEVELOPMENT_GUIDELINES.md  OBSERVER.md  PHASE1.md  PHASE2.md  PHASE3.md  README.md  index.html
docs/: OBSERVER_USAGE.md
docs/superpowers/plans/: 2026-04-06-observer-tool.md
examples/: __init__.py  basic_chat.py  create_project.py
src/: __init__.py
src/agents/: __init__.py  agent.py  factory.py
src/agents/tools/: __init__.py  base.py  file_tools.py  mcp_tool.py  think.py
src/agents/utils/: __init__.py  connections.py  history_util.py  (+1 more)
src/agents_custom/: __init__.py  base.py  coding.py  delivery.py  design.py  requirements.py  testing.py
src/cli/: main.py
src/core/: __init__.py
src/observers/: __init__.py  client.py  events.py  hook.py  logger.py  server.py  server_client.py  session.py
src/orchestrator/: __init__.py  checkpoint.py  context_store.py  workflow_engine.py
src/tools/: __init__.py  git_tool.py  project_tool.py  shell_tool.py
src/utils/: __init__.py  config.py  logging.py
tests/: conftest.py
tests/agents/: test_agent.py  test_file_tools.py  test_think.py
tests/core/: __init__.py
tests/integration/: __init__.py
tests/observers/: __init__.py  test_events.py  test_hook.py  test_logger.py  test_server.py  test_session.py
tests/orchestrator/: __init__.py  test_checkpoint.py
tests/tools/: test_base.py  test_git_tool.py  test_project_tool.py  test_shell_tool.py
